--- a/srireal/nav.css
+++ b/srireal/nav.css
@@ -75,8 +75,9 @@
 
 /* Logo Image */
 .navbar-brand img {
-  height: 60px;
+  height: 70px;
   margin-right: 10px;
+  border-radius: 50px;
 }
 
 /* Navbar Items Container */
@@ -167,7 +168,7 @@
   font-size: 3rem;
 }
 
-body {
+.body {
   font-family: 'semi-serief';
   background-color: #f8f9fa;
   margin: 0;
@@ -578,7 +579,7 @@ body {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: semi-serif;
   margin: 0;
   padding: 0;
   background-color: #fff;
