--- a/srireal/style.css
+++ b/srireal/style.css
@@ -7,6 +7,7 @@
 
 /* Scrolling Text Bar */
 .scrolling-bar {
+  max-width: 100vw;
   background: #919293;
   color: white;
   padding: 5px 0;
@@ -124,13 +125,16 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
-#nav-link-home:active {
+#main-nav{
+  max-width: 100vw;
+}
+/* #nav-link-home:active {
   color: #fff;
   background-color: #545b62;
   border-color: #4e555b;
-}
+} */
 
-#nav-link-home {
+/* #nav-link-home {
   color: rgba(0, 0, 0, .5);
   /* Text color */
   display: flex;
@@ -147,19 +151,19 @@
   text-decoration: none;
   margin: 0 10px;
   /* Added margin for space between buttons */
-}
+} */
 
-#nav-link-home:hover {
+/* #nav-link-home:hover {
   color: rgba(0, 0, 0, .7);
   background-color: #eea6ca;
   /* Light background color on hover */
   transform: translateY(-2px);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-}
+} */
 
 /* Home Section Styling */
 #home {
-  margin-top: calc(40px + 70px);
+  margin-top: calc(25px + 80px);
   /* Space for scrolling bar and navbar */
   padding: 0;
   /* No additional padding */
@@ -203,6 +207,7 @@
 #navbar-heading {
   font-size: 3rem;
 }
+
 
 body {
   font-family: 'semi-serief';
@@ -705,6 +710,7 @@ body {
 
 #navbarNav {
   font-size: 1.2rem;
+  background-color: #eea6ca;
 }
 
 html {
@@ -812,4 +818,26 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff;
+}
+
+.navbar-brand{
+  max-width: 80%;
+}
+footer{
+  max-width: 100vw;
+}
+iframe{
+  width: 100%;
+}
+.map{
+  width: 100%;
+  height: 500px;
+}
+/* mobile view */
+@media (max-width: 576px) {
+  .navbar-brand img {
+    height: 50px;
+    margin-right: 10px;
+    border-radius: 50px;
+  }
 }
